# FUZIX

Applications/MWC/cmd/: Makefile.armm0  Makefile.armm4
Applications/V7/cmd/: Makefile.armm0  Makefile.armm4
Applications/V7/games/: Makefile.armm0  Makefile.armm4
Applications/as09/: Makefile.armm0  Makefile.armm4
Applications/cave/: Makefile.armm0  Makefile.armm4
Applications/cursesgames/: Makefile.armm0  Makefile.armm4
Applications/flashrom/: Makefile.armm0  Makefile.armm4
Applications/games/: Makefile.armm0  Makefile.armm4
Applications/ld09/: Makefile.armm0  Makefile.armm4
Applications/levee/: Makefile.armm0  Makefile.armm4
Applications/netd/: Makefile.armm0  Makefile.armm4  ping.c
Applications/ue/: Makefile.armm0  Makefile.armm4
Applications/util/: Makefile.generic
Kernel/: audio.c  devio.c  filesys.c  inode.c  process.c  select.c  swap.c  syscall_exec32.c  syscall_fs3.c  syscall_proc.c  tty.c  usermem.c
Kernel/dev/: devppa.c  devscsi.c  ps2kbd.c  ps2mouse.c  rp5c01.c  tinyscsi.c  tinysd.c  xtkbd.c
Kernel/dev/net/: net_cyw43.c
Kernel/mm/: buddy.c
Kernel/platform/platform-2063/: devlpr.c
Kernel/platform/platform-68knano/: ds3234.c
Kernel/platform/platform-amprolb/: devlpr.c  devtty.c
Kernel/platform/platform-appleiie/: devhd.c
Kernel/platform/platform-aqplus/: devtty.c
Kernel/platform/platform-atarist/: devtty.c
Kernel/platform/platform-c128-z80/: sd.c
Kernel/platform/platform-centurion/: devhawk.c
Kernel/platform/platform-challengeriii/: devtty.c
Kernel/platform/platform-coco2/: discard.c
Kernel/platform/platform-coco2cart/: devlpr.c
Kernel/platform/platform-coco3/: libc.c  video.c
Kernel/platform/platform-cpc6128/: devtty.c
Kernel/platform/platform-cpcsme/: wiznet.c
Kernel/platform/platform-cromemco/: devtty.c
Kernel/platform/platform-dragon-nx32/: devlpr.c
Kernel/platform/platform-gemini/: devtty.c
Kernel/platform/platform-geneve/: devfd.c  devhd.c  hfdc.c
Kernel/platform/platform-ibmpc/: bioscon.c  biosdisk.c  xt_key.c
Kernel/platform/platform-kc87/: main.c
Kernel/platform/platform-lobo-max80/: devlpr.c
Kernel/platform/platform-mo6/: main.c
Kernel/platform/platform-msx2/: devfd.c  devhd.c  vdp.c
Kernel/platform/platform-mtx/: devtty.c
Kernel/platform/platform-n8/: devtty.c
Kernel/platform/platform-nc100/: tc8521.c
Kernel/platform/platform-pcw8256/: devvd.c
Kernel/platform/platform-pdp11/: dev_rk.c  dev_rx.c
Kernel/platform/platform-pico68k/: devtty.c
Kernel/platform/platform-px4plus/: devfd.c
Kernel/platform/platform-rc2014/: devlpr.c  devtty.c  wiznet.c
Kernel/platform/platform-rc2014-tiny/: devtty.c
Kernel/platform/platform-rcbus-68008/: devtty.c
Kernel/platform/platform-rcbus-8080/: devtty.c
Kernel/platform/platform-rcbus-8085/: devtty.c
Kernel/platform/platform-rcbus-tp128/: wiznet.c
Kernel/platform/platform-rcbus-z180/: devtty.c
Kernel/platform/platform-rosco-r2/: devtty.c
Kernel/platform/platform-rpipico/: CMakeLists.txt  config.h  lwipopts.h  main.c  tricks.S
Kernel/platform/platform-sbc08k/: devtty.c
Kernel/platform/platform-sbcv2/: wiznet.c
Kernel/platform/platform-sc108/: devtty.c
(+15 files in other folders)
